# Nuanceur

./: .gitignore  .gitmodules  DesignNotes.md  License.txt
build_android/: build_debug.cmd  build_release.cmd  clean.cmd
build_android/jni/: Android.mk  Application.mk  ExternalDependencies.mk.template
build_cmake/: CMakeLists.txt
build_unix/: CMakeLists.txt  build_debug.sh  build_release.sh
build_win32/: GeneralSettings.props  Nuanceur.sln  Nuanceur.vcxproj  Nuanceur.vcxproj.filters
include/: Float4Value.h  GlslShaderGenerator.h  Operations.h  ShaderBuilder.h  SpirvShaderGenerator.h  SwizzleSelector4.h
include/nuanceur/: Builder.h
include/nuanceur/builder/: ArrayUcharValue.h  ArrayUint16Value.h  ArrayUint8Value.h  ArrayUintValue.h  ArrayUshortValue.h  Bool2Value.h  BoolValue.h  Float2Value.h  Float3Value.h  Float4Value.h  FloatSwizzleSelector.h  FloatSwizzleSelector4.h  FloatValue.h  ImageUint2DValue.h  Int2Value.h  Int3Value.h  Int4Value.h  IntSwizzleSelector4.h  IntValue.h  Matrix44Value.h  Operations.h  ShaderBuilder.h  SubpassInputValue.h  SwizzleSelector4.h  Texture2DValue.h  UcharValue.h  Uint16Value.h  Uint3Value.h  Uint4Value.h  Uint8Value.h  UintSwizzleSelector4.h  UintValue.h  UshortValue.h
include/nuanceur/generators/: GlslShaderGenerator.h  HlslShaderGenerator.h  SpirvShaderGenerator.h
src/: GlslShaderGenerator.cpp  Operations.cpp  ShaderBuilder.cpp  SpirvShaderGenerator.cpp
src/builder/: Operations.cpp  ShaderBuilder.cpp
src/generators/: GlslShaderGenerator.cpp  HlslShaderGenerator.cpp  SpirvShaderGenerator.cpp
tests/: BasicTest.cpp  BasicTest.h  Main.cpp  Swizzle1Test.cpp  Swizzle1Test.h  Swizzle2Test.cpp  Swizzle2Test.h  SwizzleTempTest.cpp  SwizzleTempTest.h  SwizzleTest.cpp  SwizzleTest.h  Test.cpp  Test.h
